--- a/form/index.html
+++ b/form/index.html
@@ -10,36 +10,36 @@
     <h1>Formulario de registro</h1>
     <form action="datos">
       <div>
-        <label for="Nombre">Nombre: </label>
-        <input type="nombre" />
+        <label >Nombre: </label>
+        <input type="text" />
       </div>
       <br />
       <div>
-        <label for="Apellido">Apellido:</label>
-        <input type="Apellido" />
+        <label >Apellido:</label>
+        <input type="text" />
       </div>
       <br />
       <div>
-        <label for="ModalidadDeCursada">Modalidad de Cursada: </label>
-<input type="radio" name="" id="">
-<label for="OnDemand"> On-Demand</label>
-<input type="radio" name="" id="">
-<label for="EnVivo"> En Vivo</label>
+        <label >Modalidad de Cursada: </label>
+<input type="radio" name="cursada" id="">
+<label > On-Demand</label>
+<input type="radio" name="cursada" id="">
+<label > En Vivo</label>
     </div>
     <br>
     <div>
-        <label for="Correo">Correo: </label>
-        <input type="Correo">
+        <label >Correo: </label>
+        <input type="email" >
     </div>
     <br>
     <div>
        <input type="checkbox" name="" id="">
-        <label for="PermitirInformacion"> Deseo recibir información sobre nuevos posteos en la plataforma de Nucba.</label>
+        <label > Deseo recibir información sobre nuevos posteos en la plataforma de Nucba.</label>
     </div>
     <br>
     <div>
         <input type="checkbox" name="" id="">
-        <label for="TerminosCondiciones"> Declaro que lei los terminos y condiciones y estoy listo para convertirme en desarrollador web Full Stack.</label>
+        <label > Declaro que lei los terminos y condiciones y estoy listo para convertirme en desarrollador web Full Stack.</label>
     </div>
     <br>
     <input type="button" value="Enviar">
