--- a/list2/index.html
+++ b/list2/index.html
@@ -6,77 +6,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ejercicio de listas anidadas</title>
   </head>
+  <body>
+    <h1>Programación Web Full Stack</h1>
+    <div>
+      <h2>Módulos de la cursada</h2>
+      <ol>
+        <li>
+          Diseño web:
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Git y Github</li>
+          </ul>
+        </li>
+        <li>
+          Programación Web:
+          <ul>
+            <li>Javascript</li>
+          </ul>
+        </li>
+        <li>
+          Programación Web Avanzada:
+          <ul>
+            <li>ReactJs</li>
+          </ul>
+        </li>
+        <li>
+          Backend
+          <ul>
+            <li>NodeJs</li>
+            <li>Bases de datos</li>
+          </ul>
+        </li>
+      </ol>
+    </div>
+    <div>
+      <h2>Modalidad de cursada</h2>
+      <ul>
+        <li>
+          <b> Contenidos en vivo:</b>
 
-  <h1>Programación Web Full Stack</h1>
-  <div>
-    <h2>Módulos de la cursada</h2>
-    <ol>
-      <li>
-        Diseño web:
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Git y Github</li>
-        </ul>
-      </li>
-      <li>
-        Programación Web:
-        <ul>
-          <li>Javascript</li>
-        </ul>
-      </li>
-      <li>
-        Programación Web Avanzada:
-        <ul>
-          <li>ReactJs</li>
-        </ul>
-      </li>
-      <li>
-        Backend
-        <ul>
-          <li>NodeJs</li>
-          <li>Bases de datos</li>
-        </ul>
-      </li>
-    </ol>
-  </div>
-  <div>
-    <h2>Modalidad de cursada</h2>
-    <ul>
-      <li>
-        <b> Contenidos en vivo:</b>
+          <ul>
+            <br />
+            <li>Clases online en zoom</li>
+            <li>Meetups</li>
+            <li>Clases de Repaso</li>
+          </ul>
+        </li>
+        <br />
+        <li>
+          <b>Contenido Teórico-práctico</b>
 
-        <ul>
-          <br />
-          <li>Clases online en zoom</li>
-          <li>Meetups</li>
-          <li>Clases de Repaso</li>
-        </ul>
-      </li>
-      <br />
-      <li>
-        <b>Contenido Teórico-práctico</b>
-
-        <ul>
-          <br />
-          <li>
-            Teórico:
-            <ul>
-              <li>Documentaciones</li>
-              <li>Articulos de interes</li>
-            </ul>
-          </li>
-          <li>
-            Práctico:
-            <ul>
-              <li>Desafios</li>
-              <li>Entregas</li>
-            </ul>
-          </li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-
-  <body></body>
+          <ul>
+            <br />
+            <li>
+              Teórico:
+              <ul>
+                <li>Documentaciones</li>
+                <li>Articulos de interes</li>
+              </ul>
+            </li>
+            <li>
+              Práctico:
+              <ul>
+                <li>Desafios</li>
+                <li>Entregas</li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
